[project]
name = "fee-splitter-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "mamushi>=0.0.4",
    "moccasin>=0.3.8",
    "natrix>=0.1.7",
]
[tool.pytest.ini_options]
markers = [
    "fuzz: marks tests that use fuzzing techniques"
]
addopts = "-k 'not fuzz'"
